# weightlifting-analyzer

./: README.md
snatch_app/: Cargo.toml
snatch_app/src/: main.rs
snatch_app_2/: Cargo.toml
snatch_app_2/src/: main.rs
snatch_core/: Cargo.toml  README.md  video_loader.rs
snatch_core/analysis/: analyzer.rs  angles.rs  fault_detection.rs  mod.rs
snatch_core/analyzer/: analyze_frames.rs  smooth.rs  tuning.rs
snatch_core/analyzer/detection/: bar_detection.rs  bar_drift.rs  bar_velocity.rs  phases.rs  vertical_velocity.rs
snatch_core/analyzer/detection/angles/: angle_between_vectors.rs  compute_joint_angle.rs  hip_angles.rs  knee_angle.rs  torso_angle.rs
snatch_core/models/: fault.rs  keypoint.rs  lift_analysis.rs  mod.rs  pose_frame.rs
snatch_core/src/: analyze_frames.rs  coaching_tip_heuristics_based.rs  lib.rs
snatch_core_2/: Cargo.toml
snatch_core_2/src/: lib.rs  process_video.rs
